--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "allowJs": true,
     "target": "ES2017",
+    "types": ["@googlemaps/js-api-loader", "@types/google.maps"],
+    "strictNullChecks": true,
     "module": "ES2022",
     "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
     "jsx": "react-jsx",
