pnpm y otros fixes

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ functions/**/*.js
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
 .augment/rules/byterover-rules.md
+
+# Bun
++bun.lockb
