--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.9.0",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
